# Practica2ASO

./: CMakeLists.txt
.cache/clangd/index/: main.c.A341931F6A96AE82.idx
Plantilla_CAP[1]/: CMakeLists.txt  MAestroEsclavo.c  main.cpp
Plantilla_CAP[1]/examples/: CMakeLists.txt
Plantilla_CAP[1]/examples/cpp_example/: CMakeLists.txt  main.cpp
Plantilla_CAP[1]/examples/cuda_cpp_example/: CMakeLists.txt  cuda_test.cu  cuda_test.cuh  main.cpp
Plantilla_CAP[1]/examples/cuda_example/: CMakeLists.txt  main.cu
Plantilla_CAP[1]/examples/mpi_example/: CMakeLists.txt
Plantilla_CAP[1]/examples/openmp_example/: CMakeLists.txt  main.cpp
Practica/: cola.c
include/: Caja.h  Ciente.h  Cliente.h
src/: Caja.c  CajasYClientesPrioritarios.c  Cliente.c  cola.c  colaClientesPrioritarios.c  main.c
